# eqhunt

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
examples/: learn_csv.py
examples/csv/: consecutivos.csv  cuadrados.csv  diferencia.csv  mul.csv  resta.csv  suma.csv  suma3.csv  tetraedrica.csv
src/cpp/: bindings.cpp  formula3.cpp  formula3.h
src/eqhunt/: __init__.py
tests/: test_basic.py
